--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -12326,19 +12326,20 @@ pre .code {
             margin-bottom: 20px;
         }
 
-        .btn {
+          .btn {
             padding: 10px 20px;
             margin: 5px;
             border: none;
-            background-color: #4d8fd6;
+            background-color: #7A57D1;
             color: white;
             cursor: pointer;
             border-radius: 4px;
         }
 
         .btn.active {
-            background-color: #0056b3;
+            background-color: #7A57D1;
         }
+
 
         .btn:hover {
             background-color: #0056b3;
